--- a/src/FlexTemplate/Views/Home/EditPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/EditPlace.cshtml
@@ -336,16 +336,16 @@
                             <div class="submite-list-box">
 
                                 <div class="food-menu-form-wrapper">
-                                    @for (var i = 0; i < Model.Menus.Count(); i++)
+                                    @for (var i = 0; i < Model.Menus.Count; i++)
                                     {
                                         <h6 class="text-primary text-uppercase">Menu Category #@(i+1)</h6>
 
                                         <div class="form-group form-group-lg">
 
-                                            <input type="text" name="Menus[i].Name" class="form-control" value="@Model.Menus[i]"/>
+                                            <input type="text" name="Menus[i].Name" class="form-control" value="@Model.Menus[i].Name"/>
 
                                         </div>
-                                        for (var j = 0; i < Model.Menus[i].Products.Count(); j++)
+                                        for (var j = 0; j < Model.Menus[i].Products.Count; j++)
                                         {
                                              <div class="food-menu-form-box clearfix">
 
@@ -355,43 +355,45 @@
                                                  </div>
 
                                                  <div class="image-upload">
-                                                     <div class="dropzone food-menu-image @(System.IO.File.Exists("Resources/Products/" + Model.Menus[i].Products[i].Id + ".jpg") ? "food-menu-image-exsisting" : "")">
+                                                     <div class=@(Model.Menus[i].Products[j].HasPhoto ? "dropzone food-menu-image food-menu-image-exsisting" : "dropzone food-menu-image")>
                                                          <input name="file" type="file">
-                                                         <input type="hidden" name="Menus[@i].Products[@j].Guid" value="@Model.Menus[i].Products[i].Id"/>
+                                                         <input type="hidden" name="Menus[@i].Products[@j].Guid" value="@Model.Menus[i].Products[j].Id"/>
                                                          <div class="dz-default dz-message"><span>Click or Drop<br />Images Here<br /><small class="font-italic text-muted font400 mt-5 block">2MB max file</small></span></div>
                                                      </div>
                                                  </div>
 
-                                                 <div class="food-memu-form">
+                                                     <div class="food-memu-form">
 
-                                                     <div class="row gap-20">
+                                                         <div class="row gap-20">
 
-                                                         <div class="col-xss-12 col-xs-12 col-sm-9">
+                                                             <div class="col-xss-12 col-xs-12 col-sm-9">
 
-                                                             <div class="form-group">
-                                                                 <label>Title</label>
-                                                                 <input type="text" name="Menus[@i].Products[@j].Name" class="form-control" value="@Model.Menus[i].Products[i].Title"/>
-                                                             </div>
-
-                                                         </div>
-
-                                                         <div class="col-xss-12 col-xs-12 col-sm-3">
-
-                                                             <div class="form-group">
-                                                                 <label>Price</label>
-                                                                 <div class="input-group">
-                                                                     <input type="text" class="form-control" name="Menus[@i].Products[@j].Price" value="@Model.Menus[i].Products[i].Price">
-                                                                     <span class="input-group-addon">$</span>
+                                                                 <div class="form-group">
+                                                                     <label>Title</label>
+                                                                     <input type="text" name="Menus[@i].Products[@j].Name" class="form-control" value="@Model.Menus[i].Products[j].Title"/>
                                                                  </div>
+
                                                              </div>
 
-                                                         </div>
+                                                             <div class="col-xss-12 col-xs-12 col-sm-3">
 
-                                                         <div class="col-xss-12 col-xs-12 col-sm-12">
+                                                                 <div class="form-group">
+                                                                     <label>Price</label>
+                                                                     <div class="input-group">
+                                                                         <input type="text" class="form-control" name="Menus[@i].Products[@j].Price" value="@Model.Menus[i].Products[j].Price">
+                                                                         <span class="input-group-addon">$</span>
+                                                                     </div>
+                                                                 </div>
 
-                                                             <div class="form-group">
-                                                                 <label>Short Description</label>
-                                                                 <input type="text" name="Menus[@i].Products[@j].Description" class="form-control" value="@Model.Menus[i].Products[i].Description"/>
+                                                             </div>
+
+                                                             <div class="col-xss-12 col-xs-12 col-sm-12">
+
+                                                                 <div class="form-group">
+                                                                     <label>Short Description</label>
+                                                                     <input type="text" name="Menus[@i].Products[@j].Description" class="form-control" value="@Model.Menus[i].Products[j].Description"/>
+                                                                 </div>
+
                                                              </div>
 
                                                          </div>
@@ -399,53 +401,51 @@
                                                      </div>
 
                                                  </div>
+                                             }
+                                        }
+                                        <div class="clearfix mt-15">
+                                            <a id="add-product" menu-position="0"><i class="fa fa-plus-circle" aria-hidden="true"></i></a>
+                                            <a id="remove-product" menu-position="0"><i class="fa fa-minus-circle" aria-hidden="true"></i></a>
+                                            <span class="ml-5 font13 line-12 text-muted font-italic">You can add upto 10 menus</span>
+                                        </div>
 
-                                             </div>
-                                         }
-                                    }
-                                    <div class="clearfix mt-15">
-                                        <a id="add-product" menu-position="0"><i class="fa fa-plus-circle" aria-hidden="true"></i></a>
-                                        <a id="remove-product" menu-position="0"><i class="fa fa-minus-circle" aria-hidden="true"></i></a>
-                                        <span class="ml-5 font13 line-12 text-muted font-italic">You can add upto 10 menus</span>
                                     </div>
 
                                 </div>
 
+                            <div class="text-center">
+                                <h6 class="text-primary text-uppercase mb-0"><a id="add-menu" menu-position="0"><i class="fa fa-plus font14"></i> Add more menu category</a></h6>
+                                <p>You can add upto 10 menu categories</p>
                             </div>
-
-                        <div class="text-center">
-                            <h6 class="text-primary text-uppercase mb-0"><a id="add-menu" menu-position="0"><i class="fa fa-plus font14"></i> Add more menu category</a></h6>
-                            <p>You can add upto 10 menu categories</p>
-                        </div>
-                        <!--End Menus-->
-                        <!--Фотографії-->
-                        <div class="row">
-                            <div class="col-md-8">
-                                <div class="section-title-02 mb-20">
-                                    <h3><span>Фотографії</span></h3>
-                                    <p>Підніміть свої проекти на якісно новий рівень.</p>
+                            <!--End Menus-->
+                            <!--Фотографії-->
+                            <div class="row">
+                                <div class="col-md-8">
+                                    <div class="section-title-02 mb-20">
+                                        <h3><span>Фотографії</span></h3>
+                                        <p>Підніміть свої проекти на якісно новий рівень.</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="submite-list-box">
-                            <div id="new-place" class="dropzone">
-                                <input name="files" type="file" multiple>
-                                <input class="file_descriptor" type="hidden" name="uid" value="@Guid.NewGuid().ToString()" />
-                                <div class="dz-default dz-message"><span>Натисніть або перетяніть сюди зображення</span></div>
+                            <div class="submite-list-box">
+                                <div id="new-place" class="dropzone">
+                                    <input name="files" type="file" multiple>
+                                    <input class="file_descriptor" type="hidden" name="uid" value="@Guid.NewGuid().ToString()" />
+                                    <div class="dz-default dz-message"><span>Натисніть або перетяніть сюди зображення</span></div>
+                                </div>
                             </div>
-                        </div>
-                        <!--End Фотографії-->
-                        <!--Submit-->
-                        <!--<div class="checkbox-block font-icon-checkbox">
-                            <input id="term_accept-1" name="TermAccept" type="checkbox" class="required checkbox" />
-                            <label class="" for="term_accept-1">Am terminated it excellence invitation projection as. She graceful shy believed distance use nay. Lively is people so basket ladies window expect. <a href="#" class="font700">Terms &amp; Conditions</a></label>
-                        </div>-->
-                        <input type="submit" class="btn btn-primary mt-15" value="Відправити" />
-                        <!--End Submit-->
-                    </form>
+                            <!--End Фотографії-->
+                            <!--Submit-->
+                            <!--<div class="checkbox-block font-icon-checkbox">
+                                <input id="term_accept-1" name="TermAccept" type="checkbox" class="required checkbox" />
+                                <label class="" for="term_accept-1">Am terminated it excellence invitation projection as. She graceful shy believed distance use nay. Lively is people so basket ladies window expect. <a href="#" class="font700">Terms &amp; Conditions</a></label>
+                            </div>-->
+                            <input type="submit" class="btn btn-primary mt-15" value="Відправити" />
+                            <!--End Submit-->
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 <!-- end Main Wrapper -->
