--- a/src/FlexTemplate/Views/Home/NewPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/NewPlace.cshtml
@@ -39,13 +39,13 @@
                                 <div class="col-xs-12 col-sm-12">
                                     <div class="form-group form-group-lg">
                                         <label>Назва ресторану:</label>
-                                        <input id="required" type="text" class="form-control" name="Name"/>
+                                        <input type="text" class="form-control required" name="Name"/>
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-12">
                                     <div class="form-group bootstrap3-wysihtml5-wrapper">
                                         <label>Iнформація про ресторан:</label>
-                                        <textarea id="required" name="Description" class="bootstrap3-wysihtml5 form-control" placeholder="Введіть текст ..." style="height: 200px;"></textarea>
+                                        <textarea name="Description" class="bootstrap3-wysihtml5 form-control" placeholder="Введіть текст ..." style="height: 200px;"></textarea>
                                     </div>
                                 </div>
                             </div>
@@ -68,31 +68,31 @@
                                 <div class="col-xs-12 col-sm-4">
                                     <div class="form-group">
                                         <label>Місто</label>
-                                        <input id="required" type="text" class="form-control" name="city" />
+                                        <input type="text" class="form-control required" name="city" />
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-4">
                                     <div class="form-group">
                                         <label>Вулиця</label>
-                                        <input id="required" type="text" class="form-control" name="street" />
+                                        <input type="text" class="form-control required" name="street" />
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-4">
                                     <div class="form-group">
                                         <label>Адреса</label>
-                                        <input id="required" type="text" class="form-control" name="address" />
+                                        <input type="text" class="form-control required" name="address" />
                                     </div>
                                 </div>
                                 <div class="col-xss-12 col-xs-6 col-sm-4">
                                     <div class="form-group">
                                         <label>Телефон</label>
-                                        <input id="required" type="text" class="form-control" name="phone" />
+                                        <input type="text" class="form-control required" name="phone" />
                                     </div>
                                 </div>
                                 <div class="col-xss-12 col-xs-6 col-sm-4">
                                     <div class="form-group">
                                         <label>Email</label>
-                                        <input id="required" type="email" class="form-control" name="email" />
+                                        <input type="email" class="form-control required" name="email" />
                                     </div>
                                 </div>
                                 <div class="col-xss-12 col-xs-6 col-sm-4">
